engine/baml-runtime/tests/viz-runtime/snapshots/viz_runtime__viz_runtime__simple_loop@simple_loop.baml.snap
---
source: baml-runtime/tests/viz-runtime.rs
expression: "&snapshot"
input_file: baml-runtime/tests/viz-runtime/testdata/simple_loop.baml
---
fixture: simple_loop.baml
snapshots:
  - watch_event:
      kind: viz_exec_state
      function: Main
      variable: ~
      channel: ~
      stream_id: ~
      lexical_id: "Main|root:0"
      header: ~
      viz_event:
        event: enter
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        lexical_id: "Main|root:0"
        label: Main
        header_level: ~
      value: ~
      is_stream: false
    stack_after:
      - "Main|root:0"
    emitted_events:
      - node_id: 0
        lexical_id: "Main|root:0"
        new_state: running
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      lexical_id: "MyFunction1|root:0"
      header: ~
      viz_event:
        event: enter
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        lexical_id: "MyFunction1|root:0"
        label: MyFunction1
        header_level: ~
      value: ~
      is_stream: false
    stack_after:
      - "Main|root:0"
      - "MyFunction1|root:0"
    emitted_events:
      - node_id: 0
        lexical_id: "MyFunction1|root:0"
        new_state: running
  - watch_event:
      kind: header
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      lexical_id: ~
      header:
        level: 1
        title: Loop
      viz_event: ~
      value: ~
      is_stream: false
    stack_after:
      - "Main|root:0"
      - "MyFunction1|root:0"
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      lexical_id: "MyFunction1|root:0|hdr:loop:0"
      header: ~
      viz_event:
        event: enter
        node_id: 1
        node_type: header_context_enter
        path_segment:
          kind: header
          slug: loop
          ordinal: 0
        lexical_id: "MyFunction1|root:0|hdr:loop:0"
        label: Loop
        header_level: 1
      value: ~
      is_stream: false
    stack_after:
      - "Main|root:0"
      - "MyFunction1|root:0"
      - "MyFunction1|root:0|hdr:loop:0"
    emitted_events:
      - node_id: 1
        lexical_id: "MyFunction1|root:0|hdr:loop:0"
        new_state: running
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
      header: ~
      viz_event:
        event: enter
        node_id: 2
        node_type: loop
        path_segment:
          kind: loop
          slug: for-item-in-items
          ordinal: 0
        lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
        label: for (item in items)
        header_level: ~
      value: ~
      is_stream: false
    stack_after:
      - "Main|root:0"
      - "MyFunction1|root:0"
      - "MyFunction1|root:0|hdr:loop:0"
      - "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
    emitted_events:
      - node_id: 2
        lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
        new_state: running
  - watch_event:
      kind: value
      function: MyFunction1
      variable: acc
      channel: acc
      stream_id: ~
      lexical_id: ~
      header: ~
      viz_event: ~
      value: a
      is_stream: false
    stack_after:
      - "Main|root:0"
      - "MyFunction1|root:0"
      - "MyFunction1|root:0|hdr:loop:0"
      - "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
      header: ~
      viz_event:
        event: exit
        node_id: 2
        node_type: loop
        path_segment:
          kind: loop
          slug: for-item-in-items
          ordinal: 0
        lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
        label: for (item in items)
        header_level: ~
      value: ~
      is_stream: false
    stack_after:
      - "Main|root:0"
      - "MyFunction1|root:0"
      - "MyFunction1|root:0|hdr:loop:0"
    emitted_events:
      - node_id: 2
        lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
        new_state: completed
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
      header: ~
      viz_event:
        event: enter
        node_id: 2
        node_type: loop
        path_segment:
          kind: loop
          slug: for-item-in-items
          ordinal: 0
        lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
        label: for (item in items)
        header_level: ~
      value: ~
      is_stream: false
    stack_after:
      - "Main|root:0"
      - "MyFunction1|root:0"
      - "MyFunction1|root:0|hdr:loop:0"
      - "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
    emitted_events:
      - node_id: 2
        lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
        new_state: running
  - watch_event:
      kind: value
      function: MyFunction1
      variable: acc
      channel: acc
      stream_id: ~
      lexical_id: ~
      header: ~
      viz_event: ~
      value: ab
      is_stream: false
    stack_after:
      - "Main|root:0"
      - "MyFunction1|root:0"
      - "MyFunction1|root:0|hdr:loop:0"
      - "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
      header: ~
      viz_event:
        event: exit
        node_id: 2
        node_type: loop
        path_segment:
          kind: loop
          slug: for-item-in-items
          ordinal: 0
        lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
        label: for (item in items)
        header_level: ~
      value: ~
      is_stream: false
    stack_after:
      - "Main|root:0"
      - "MyFunction1|root:0"
      - "MyFunction1|root:0|hdr:loop:0"
    emitted_events:
      - node_id: 2
        lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
        new_state: completed
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
      header: ~
      viz_event:
        event: enter
        node_id: 2
        node_type: loop
        path_segment:
          kind: loop
          slug: for-item-in-items
          ordinal: 0
        lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
        label: for (item in items)
        header_level: ~
      value: ~
      is_stream: false
    stack_after:
      - "Main|root:0"
      - "MyFunction1|root:0"
      - "MyFunction1|root:0|hdr:loop:0"
      - "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
    emitted_events:
      - node_id: 2
        lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
        new_state: running
  - watch_event:
      kind: value
      function: MyFunction1
      variable: acc
      channel: acc
      stream_id: ~
      lexical_id: ~
      header: ~
      viz_event: ~
      value: abc
      is_stream: false
    stack_after:
      - "Main|root:0"
      - "MyFunction1|root:0"
      - "MyFunction1|root:0|hdr:loop:0"
      - "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
    emitted_events: []
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
      header: ~
      viz_event:
        event: exit
        node_id: 2
        node_type: loop
        path_segment:
          kind: loop
          slug: for-item-in-items
          ordinal: 0
        lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
        label: for (item in items)
        header_level: ~
      value: ~
      is_stream: false
    stack_after:
      - "Main|root:0"
      - "MyFunction1|root:0"
      - "MyFunction1|root:0|hdr:loop:0"
    emitted_events:
      - node_id: 2
        lexical_id: "MyFunction1|root:0|hdr:loop:0|loop:for-item-in-items:0"
        new_state: completed
  - watch_event:
      kind: viz_exec_state
      function: MyFunction1
      variable: ~
      channel: ~
      stream_id: ~
      lexical_id: "MyFunction1|root:0"
      header: ~
      viz_event:
        event: exit
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        lexical_id: "MyFunction1|root:0"
        label: MyFunction1
        header_level: ~
      value: ~
      is_stream: false
    stack_after:
      - "Main|root:0"
    emitted_events:
      - node_id: 1
        lexical_id: "MyFunction1|root:0|hdr:loop:0"
        new_state: completed
      - node_id: 0
        lexical_id: "MyFunction1|root:0"
        new_state: completed
  - watch_event:
      kind: viz_exec_state
      function: Main
      variable: ~
      channel: ~
      stream_id: ~
      lexical_id: "Main|root:0"
      header: ~
      viz_event:
        event: exit
        node_id: 0
        node_type: function_root
        path_segment:
          kind: function_root
          ordinal: 0
        lexical_id: "Main|root:0"
        label: Main
        header_level: ~
      value: ~
      is_stream: false
    stack_after: []
    emitted_events:
      - node_id: 0
        lexical_id: "Main|root:0"
        new_state: completed
